Allow ignoring scroll wheel events
When a horizontal carousel is in a vertical scrolled window, when scrolling the page if the pointer ends up hovering the carousel, the next scrolling events will scroll the carousel instead of the page. This is pretty inconvenient, so having a property to ignore specifically these events would be welcome.
I think it should be implemented in HdyCarousel
because I tried working around it, and nothing worked:
- Dropping
GDK_SMOOTH_SCROLL_MASK
also drops support for touchpads. - Listening to
HdyCarousel:scroll-event
and returningGDK_EVENT_STOP
will prevent the scroll event from reaching the scrolled window, which is what we want to avoid. - Listening to
HdyCarousel:scroll-event
and returningGDK_EVENT_PROPAGATE
will chain up toHdyCarousel
's callback which will handle the event as usual, hence doing nothing.