carousel: Add the allow-scroll-wheel prop

Fixes https://gitlab.gnome.org/GNOME/libhandy/-/issues/434